[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/graphics/water.png" type="Texture" id=1]
[ext_resource path="res://src/world/Oasis.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0

[node name="Oasis" type="Area2D"]
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
